[SUREFIRE-1424] javax.transaction.TransactionManager not visible with Java9